syntax = "proto3";
package prod;

import "models.proto";

message ProdRequest {
    // @inject_tag: json:"size",form:"size"
    int32 size = 1;
    // @inject_tag: uri:"pid"
    int32 prod_id = 2;
}

message ProdResponse {
    repeated ProdModel data = 1;
}

message ProdDetailResponse {
    ProdModel data = 1;
}

service ProdService {
    rpc GetProdList (ProdRequest) returns (ProdResponse);
    rpc GetProdDetail (ProdRequest) returns (ProdDetailResponse);
}